 ^ Replaced installation favicon.
 # [#18011] XML says category instead of categories
 # [#17983] [patch] New Categories are attaching to ROOT instead of designated parent
 # [#17980] Query Error in JHTML::_( 'list.users' )
 # Various E_STRICT validation fixes.
 ^ Changed arguments of setBuffer() method in JDocument classes.
 # [#18025] Make Toolbars conistent across administrator components

12-Sep-2009 Ron Severdia
# BlueStork CSS fixes
# Article Manager cleanup
^ Replace tables in pane sliders
+ Robots dropdown added
+ Missing language strings added

11-Sep-2009 Hannes Papenberg
 ^ Ability to add additional layouts with own parameters via a template added to menu manager

10-Sep-2009 Ron Severdia
 # BlueStork fixes
 # Edit Category interface tweaks
 ^ Copied system images to admin template subfolder

10-Sep-2009 Ercan Ozkaya
 ^ Localised invalid token messages
 ^ Converted jExit calls to jexit
 # Fixed notices in com_messages
 # Fixed invalid client_id value for redirect plugin
 - Removed checked_out values in installation sql

08-Sep-2009 Hannes Papenberg
 + Added "Touched" option to mod_latestnews

08-Sep-2009 Ron Severdia
 # BlueStork fixes
 ^ Moved Media Manager folder field to bottom
 $ Language consistency fixes
 ^ Updated toolbar icons

31-Aug-2009 Ron Severdia
 # BlueStork fixes
 $ Language consistency fixes
 - Removed unnecessary radio buttons in new module
 - Removed unused Tools menu from top menu

22-Aug-2009 Ron Severdia
 # BlueStork fixes
 $ Added missing language strings
 + New icon for Menu Manager in top menu

19-Aug-2009 Sam Moffatt
 # [#17680] Menu links not working for 3rd party components thanks to Matias Aguirre

13-Aug-2009 Gergo Erdosi
 ^ Deprecated JToolBarHelper functions: customX, addNewX, editListX, editHtmlX, editCssX and deleteListX.
 - Removed $hideMenu parameter of JButtonStandard->fetchButton.
 ^ Changed deprecated JToolBarHelper function calls in core components.